--- a/react/mimark/auth-react-node-main/auth-front/src/index.css
+++ b/react/mimark/auth-react-node-main/auth-front/src/index.css
@@ -3,21 +3,17 @@
   line-height: 1.5;
   font-weight: 400;
   color: black;
-  
 }
 
 body {
   padding: 0;
   margin: 0;
-  background-image: url(../src/img/cajas-carton-equipo-interior-oficina-espacio-abierto-blanco-espacioso-concepto-mudanza_933530-709.jpg);
+  background:linear-gradient(0deg, rgba(255, 255, 255, 0.5) 100%, rgba(2, 19, 40, 0.256) 100%), url(../src/img/cajas-carton-equipo-interior-oficina-espacio-abierto-blanco-espacioso-concepto-mudanza_933530-709.jpg);
+  min-height: 100vh;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   opacity: 90%;
-  
-  
-
-  
 }
 
 label {
